--- a/multi/multi-01-starting-setup/backend/package.json
+++ b/multi/multi-01-starting-setup/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Maximilian Schwarzmüller / Academind GmbH",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
