--- a/multi/laravel-php/docker-compose.yml
+++ b/multi/laravel-php/docker-compose.yml
@@ -6,7 +6,13 @@ services:
       - '8000:80'
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  # php:
+
+  php:
+    build:
+      context: ./dockerfiles
+      dockerfile: php.dockerfile
+    volumes:
+      - ./src:/var/www/html:delegated
   # mysql:
   # composer:
   # artisan:
