--- a/multi/laravel-php/docker-compose.yml
+++ b/multi/laravel-php/docker-compose.yml
@@ -13,7 +13,11 @@ services:
       dockerfile: php.dockerfile
     volumes:
       - ./src:/var/www/html:delegated
-  # mysql:
+
+  mysql:
+    image: mysql:5.7
+    env_file:
+      - ./env/mysql.env
   # composer:
   # artisan:
   # npm:
