--- a/multi/laravel-php/docker-compose.yml
+++ b/multi/laravel-php/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.8'
 services:
   server:
-    image: 'nginx:stable-alpine'
+    build:
+      context: .
+      dockerfile: dockerfiles/nginx.dockerfile
     ports:
       - '8000:80'
     volumes:
@@ -13,8 +15,8 @@ services:
 
   php:
     build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
     volumes:
       - ./src:/var/www/html:delegated
 
@@ -32,8 +34,8 @@ services:
 
   artisan:
     build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
+      context: .
+      dockerfile: dockerfiles/php.dockerfile
     volumes:
       - ./src:/var/www/html
     entrypoint: ['php', '/var/www/html/artisan']
