--- a/k8s/kub-net/lib/app/docker-compose.yaml
+++ b/k8s/kub-net/lib/app/docker-compose.yaml
@@ -1,15 +1,16 @@
-version: "3"
+version: '3'
 services:
   auth:
     build: ./auth-api
   users:
     build: ./users-api
-    ports: 
-      - "8080:8080"
+    environment:
+      AUTH_ADDRESS: auth
+    ports:
+      - '8080:8080'
   tasks:
     build: ./tasks-api
-    ports: 
-      - "8000:8000"
+    ports:
+      - '8000:8000'
     environment:
       TASKS_FOLDER: tasks
-    
